button spacing error fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,20 @@
 }
 
 * {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
   text-decoration: none;
 }
 
-a:visited { text-decoration: none; color:var(--tmdb-light-blue); }
+a:visited {
+  text-decoration: none;
+  color: var(--tmdb-light-blue);
+}
 
 li {
   list-style-type: none;
@@ -45,10 +48,10 @@ li {
 }
 
 .link__hover-effect:after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: -3px;
-  right:0;
+  right: 0;
   height: 3px;
   width: 0;
   background-color: black;
@@ -81,12 +84,11 @@ nav {
 .nav__container {
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
   padding: 24px 16px;
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  
 }
 
 .nav__img--wrapper {
@@ -96,7 +98,6 @@ nav {
 .nav__img {
   height: 40px;
 }
-
 
 .nav__links {
   display: flex;
@@ -127,9 +128,6 @@ nav {
 .btn-contact:hover {
   background-color: #01b3e4bb;
 }
-
-
-
 
 /* 
 
@@ -189,12 +187,12 @@ header
 .header__search-options {
   display: flex;
   flex-direction: row;
-  gap: 45px;
   margin-top: 32px;
 }
 
 .search-option__link {
   padding: 16px 8px;
+  margin: 10px;
   color: white;
   font-weight: 500;
   background-color: var(--tmdb-light-blue);
@@ -238,14 +236,14 @@ Movie search results
   padding: 8px;
   margin: 16px;
   width: calc(90% / 3);
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   transition: 300ms;
   cursor: pointer;
 }
 
 .movie:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6);
 }
 
 .movie__img--wrapper {
@@ -266,7 +264,6 @@ Movie search results
   text-align: center;
   color: black;
 }
-
 
 .skeleton__img {
   background-color: lightgray;
@@ -398,7 +395,7 @@ MovieDetail
 
 .MovieDetail__title--skeleton {
   width: 70%;
-  height: 42px ;
+  height: 42px;
   margin-top: 8px;
   margin-bottom: 16px;
   background-color: lightgray;
@@ -406,42 +403,42 @@ MovieDetail
 
 .MovieDetail__release-date--skeleton {
   width: 50%;
-  height: 34px ;
+  height: 34px;
   margin-bottom: 4px;
   background-color: lightgray;
 }
 
 .MovieDetail__runtime--skeleton {
   width: 40%;
-  height: 34px ;
+  height: 34px;
   margin-bottom: 4px;
   background-color: lightgray;
 }
 
 .MovieDetail__vote--skeleton {
   width: 40%;
-  height: 34px ;
+  height: 34px;
   margin-bottom: 4px;
   background-color: lightgray;
 }
 
 .MovieDetail__genre--skeleton {
   width: 80%;
-  height: 34px ;
+  height: 34px;
   margin-bottom: 4px;
   background-color: lightgray;
 }
 
 .MovieDetail__summary__title--skeleton {
   width: 30%;
-  height: 34px ;
+  height: 34px;
   margin-bottom: 4px;
   background-color: lightgray;
 }
 
 .MovieDetail__summary__para--skeleton {
   width: 100%;
-  height: 100px ;
+  height: 100px;
   margin-bottom: 4px;
   background-color: lightgray;
 }
@@ -465,27 +462,25 @@ footer {
   font-size: 18px;
 }
 
-
-
 /* 
 
 media queries
 
 */
 
-@media(max-height: 1200px) {
+@media (max-height: 1200px) {
   .header__img {
     height: 300px;
   }
 }
 
-@media(max-width: 1000px) {
+@media (max-width: 1000px) {
   .movie {
     width: calc(90% / 2);
   }
 }
 
-@media(max-width: 670px) {
+@media (max-width: 670px) {
   .movie {
     width: 100%;
   }
@@ -510,7 +505,7 @@ media queries
   }
 }
 
-@media(max-width: 460px) {
+@media (max-width: 460px) {
   .nav__img {
     height: 15px;
   }
@@ -530,4 +525,3 @@ media queries
     height: 400px;
   }
 }
-
